# mars-window-workbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
fleets/: six-tanker-chain.yaml  thin-fleet.yaml
mars_window/: __init__.py  cli.py  doctor.py  errors.py  models.py  planner.py  report.py  simulator.py
scenarios/: artemis-pathfinder.yaml  cargo-only-demo.yaml  overweight-fail.yaml
site/: app.js  charts.js  data.js  index.html  sample-receipt.json  styles.css
tests/: test_gates.py
windows/: 2028-short.yaml  missed-window.yaml
