[project]
name = "mars-window-workbench"
version = "0.1.0"
description = "Mars Window Commit Workbench — validate Starship fleet + cargo manifest against Earth-Mars window budgets before committing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Enaguthi" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
mars-window = "mars_window.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mars_window"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
